--- a/part1/face-det/face_det.ipynb
+++ b/part1/face-det/face_det.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DNN"
+    "SSD with Resnet-10"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dnn(img, size, score):\n",
+    "def ssd(img, size, score):\n",
     "    h, w = img.shape[:2]\n",
     "\n",
     "    img_copy = img.copy()\n",
@@ -140,7 +140,7 @@
     "score = 0.2\n",
     "\n",
     "# image = haar_cascade(img)\n",
-    "# image = dnn(img=img, size=size, score=score)\n",
+    "# image = ssd(img=img, size=size, score=score)\n",
     "image = mtcnn(img)\n",
     "plt.figure(figsize=(5,10))\n",
     "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
@@ -219,7 +219,7 @@
     "   \n",
     "    #detect faces\n",
     "    # result = haar_cascade(frame)\n",
-    "    # result = dnn(img=frame, size=size, score=score)\n",
+    "    # result = ssd(img=frame, size=size, score=score)\n",
     "    result = mtcnn(frame)\n",
     "    cv2.imshow('Face Detection', result);\n",
     "    \n",
