pca and mahalobis

--- a/part1/face-rec/olivetti_faces_pca_keras.ipynb
+++ b/part1/face-rec/olivetti_faces_pca_keras.ipynb
@@ -867,7 +867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('models/face_rec_keras.h5')"
+    "model.save('artifacts/face_rec_keras.h5')"
    ]
   },
   {
